--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,12 @@
 		"default_title": "SensorInfoHunter",
 		"default_popup": "popup.html"
 	},
+	"content_scripts": [
+		{
+			"matches":["<all_urls>"],
+			"js": ["js/jquery-1.8.3.js", "js/content-script.js"]
+		}
+	],
 	// 权限申请
 	"permissions":
 	[
