--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
 		"default_title": "SensorInfoHunter",
 		"default_popup": "popup.html"
 	},
+	"options_page": "options.html",
 	"content_scripts": [
 		{
 			"matches":["<all_urls>"],
