--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
 		"default_title": "SensorInfoHunter",
 		"default_popup": "popup.html"
 	},
-	"options_page": "options.html",
+	
 	"content_scripts": [
 		{
 			"matches":["<all_urls>"],
@@ -36,5 +36,10 @@
 	"background":
 	{
 		"scripts": ["js/background.js"]
+	},
+	"options_ui":
+	{
+		"page":"options.html",
+		"chrome_style":true
 	}
 }
